--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "modern-js-application",
   "version": "1.0.0",
   "description": "Yves T, Thibaut G   ## About the project   This website is a character manager. It allow to list, add, update and delete characters from a database.   ## Publishing   Soon!   ## Link to the website   Soon!   ### About this version and repository   Repository using Challenge Manager to work on enhancement with JS",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "npx seve -e '*.json,*.md,node_modules,_shared' -p 8000 -i ."
   },
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/Yves852/modern-js-application#readme",
   "devDependencies": {
     "seve": "^0.10.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
