--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Yves852/modern-js-application#readme",
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "prettier": "2.3.2",
     "seve": "^0.10.0",
     "webpack": "^5.51.0",
     "webpack-cli": "^4.8.0"
