--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "prettier": "2.3.2",
+    "sass": "^1.38.0",
     "seve": "^0.10.0",
     "webpack": "^5.51.0",
     "webpack-cli": "^4.8.0"
