--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Yves T, Thibaut G   ## About the project   This website is a character manager. It allow to list, add, update and delete characters from a database.   ## Publishing   Soon!   ## Link to the website   Soon!   ### About this version and repository   Repository using Challenge Manager to work on enhancement with JS",
   "private": true,
   "scripts": {
-    "start": "npx seve -e '*.json,*.md,node_modules,_shared' -p 8000 -i .",
+    "start": "npx seve -e '*.json,*.md,node_modules,_shared' -p 8000 -i ./dist",
     "build": "webpack"
   },
   "repository": {
